syntax = "proto3";

option go_package = "./pb";

enum LangType {
  golang = 0;
  rust = 1;
  c = 2;
  cpp = 3;
  java = 4;
}

// 判题结果
message JudgeResult {
  string id = 1;             // 判题结果 ID
  string user_id = 2;    // 用户 ID
  uint32 status = 3;         // 判题状态
  string code = 4;       // 代码内容
  LangType lang = 5;       // 编程语言
  uint64 time_used = 6;      // 用时（可选）
  uint64 memory_used = 7;    // 使用内存（可选）
}

// 提交判题请求
message JudgeReq {
  string user_id = 1;
  string problem_id = 2; // 题目 ID
  bytes code = 3;       // 代码内容
  LangType lang = 4;       // 编程语言
}

// 提交判题响应
message JudgeResp {
  JudgeResult result = 1; // 判题结果
}

// 判题状态查询请求
message JudgeStatusReq {
  string user_id = 1;
  string judge_id = 2; // 提交 ID
}

// 判题状态查询响应
message JudgeStatusResp {
  JudgeResult result = 1; // 判题结果
}

// 判题列表查询请求
message ListJudgeReq {
  string judge_id = 1;         // ID（可选）
  string user_id = 2;    // 用户 ID（可选）
  string problem_id = 3; // 题目 ID（可选）
  string group_id = 4;   // 组 ID（可选）
  LangType lang = 5;
  uint32 status = 6;     // 判题状态（可选）
  int32 page = 7;        // 分页页码（可选）
  int32 page_size = 8;   // 分页大小（可选）
}

// 判题列表查询响应
message ListJudgeResp {
  repeated JudgeResult list = 1; // 判题结果列表
  int32 total = 2;              // 总记录数
  int32 page = 3;               // 当前页码
  int32 page_size = 4;          // 当前页大小
}

// 尝试运行请求
message TryReq {
  string user_id = 1;
  string problem_id = 2; // 题目 ID
  bytes code = 3;       // 代码内容
  bytes input = 4;
  LangType lang = 5;       // 编程语言
}

// 尝试运行响应
message TryResp {
  string output = 1; // 输出结果
}

// 获取 Wasm 请求
message WasmReq {
  string user_id = 1;
  string problem_id = 2; // 题目 ID
  bytes code = 3;       // 代码内容
  LangType lang = 4;       // 编程语言
}

// 获取 Wasm 响应
message WasmResp {
  bytes wasm_binary = 1; // Wasm 二进制数据
  string compile_err = 2;
}

message Group {
  string id = 1;
  string name = 2;
}

message CreateGroupReq {
  string user_id = 1;
  string Title = 2;
  string Content = 3;
}

message CreateGroupResp {
  string id = 1;
}

message DeleteGroupReq {
  string id = 1;
  string operator_user_id = 2;
}

message DeleteGroupResp {}

message ListGroupReq {
  string group_id = 1;
  string user_id = 2;
  uint32 min_role = 3;
}

message ListGroupResp {
  repeated Group groups = 1;
}

message GroupSetUserRoleReq {
  string operator_user_id = 1;
  string group_id = 2;
  string user_id = 3;
  uint32 role = 4;
}

message GroupSetUserRoleResp {}

message GroupDeleteUserReq {
  string operator_user_id = 1;
  string group_id = 2;
  string user_id = 3;
}

message GroupDeleteUserResp {}

message GroupAddProblemReq {
  string operator_user_id = 1;
  string group_id = 2;
  string problem_id = 3;
}

message GroupAddProblemResp {}

message GroupDeleteProblemReq {
  string operator_user_id = 1;
  string group_id = 2;
  string problem_id = 3;
}

message GroupDeleteProblemResp {}

message LangCtx {
  uint32 lang = 1;
  string init_code = 2;
  string template = 3;
}

message JudgeData {
  string input = 1;
  string output = 2;
}

message CreateProblemReq {
  string title = 1;
  string content = 2;
  uint32 difficulty = 3;
  repeated LangCtx lang_ctx_arr = 4;
  repeated JudgeData judge_data_arr = 5;
}

message CreateProblemResp {
  string id = 1;
}

// 定义判题服务
service MoeJudgeSvc {
  // 查询判题列表
  rpc ListJudge (ListJudgeReq) returns (ListJudgeResp);

  // 提交判题请求
  rpc SubmitJudge (JudgeReq) returns (JudgeResp);

  // 查询判题状态
  rpc GetJudgeStatus (JudgeStatusReq) returns (JudgeStatusResp);

  // 尝试运行
  rpc Try (TryReq) returns (TryResp);

  // 获取判题 Wasm
  rpc GetWasm (WasmReq) returns (WasmResp);

  // 创建问题
  rpc CreateProblem (CreateProblemReq) returns (CreateProblemResp);

  // 删除问题
//  rpc DeleteProblem (DeleteProblemReq) returns (DeleteProblemResp);

  // 创建组
  rpc CreateGroup (CreateGroupReq) returns (CreateGroupResp);

  // 删除组
  rpc DeleteGroup (DeleteGroupReq) returns (DeleteGroupResp);

  // 获取组列表
  rpc ListGroup (ListGroupReq) returns (ListGroupResp);

  // 设置组用户角色
  rpc GroupSetUserRole (GroupSetUserRoleReq) returns (GroupSetUserRoleResp);

  // 删除组用户
  rpc GroupDeleteUser (GroupDeleteUserReq) returns (GroupDeleteUserResp);

  // 向组添加问题
  rpc GroupAddProblem (GroupAddProblemReq) returns (GroupAddProblemResp);

  // 从组删除问题
  rpc GroupDeleteProblem (GroupDeleteProblemReq) returns (GroupDeleteProblemResp);
}
